--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-/* Import the Atkinson Hyperlegible font from Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;400&display=swap');
 
 .ibm-plex-mono-regular {
